--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <h1> Welcome to Clementine! </h1>  
 <h3>Hi there, <%= current_user.email %>!</h3>
 
-<%= react_component("App") %>
+<%= react_component 'App' %>
 
 <!-- <h4>Your Purchases</h4>
 <% if current_user.sales.any? %>
